2008-02-06  John W. Eaton  <jwe@octave.org>

	* interpreter/Makefile.in (stmp-html, HTML): New targets.
	($(HTML_IMAGES_PNG)): Also depend on stmp-html.
	Don't create HTML directory here.

2007-12-28  John W. Eaton  <jwe@octave.org>

	Merge changes from object branch:

	2007-06-20  John W. Eaton  <jwe@octave.org>

	* interpreter/var.txi, interpreter/io.txi:
	Eliminate print_answer_id_name.

2007-12-21  John W. Eaton  <jwe@octave.org>

	Version 3.0.0 released.

2007-12-13  John W. Eaton  <jwe@octave.org>

	* Makefile.in (conf.texi): Also depend on $(top_srcdir)/src/version.h.

2007-12-05  John W. Eaton  <jwe@octave.org>

	* interpreter/geometryimages.m (image_as_txt): New function.
	Use it to generate "figures" for Info format.
	* interpreter/interpimages.m: Likewise.
	* interpreter/sparseimages.m: Likewise.

2007-12-04  John W. Eaton  <jwe@octave.org>

	* interpreter/sparseimages.m, interpreter/plotimages.m,
	interpreter/interpimages.m, interpreter/geometryimages.m:
	Set default text font to "*" for png images.

	* interpreter/Makefile.in (run-octave): Don't sleep.

2007-12-04  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* interpreter/plotimages.m: Generate text plots.
	* interpreter/sparseimages.m: Add initial blank line to text plots.

	* interpreter/Makefile.in (IMAGES_TXT): Include $(INTERPIMAGES_TXT)
	$(GEOMETRYIMAGES_TXT) and $(PLOTIMAGES_TXT) in the list.
	(INTERPIMAGES_TXT, GEOMETRYIMAGES_TXT, PLOTIMAGES_TXT): New variables.

2007-11-26  David Bateman  <dbateman@free.fr>

	* interpreter/sparse.txi: Document condest.
	* interpreter/plot.txi: Document the new text properties and the
	TeX interpreter mode of text objects.
	* interpreter/plotimages.m: Add an example for the TeX
	interpreter.
	* interpreter/Makefile.in (PLOTIMAGES): Add the TeX example

	* interpreter/plot.txi: Document caxis.
	* interpreter/image.txi: Document gmap40.

2007-11-12  Joseph P. Skudlarek  <Jskud@Jskud.com>

	* interpreter/gpl.txi: Move index commands after sectioning commands.
