@@ -1,3 +1,10 @@
+2008-02-07  David Bateman  <dbateman@free.fr>
+
+	* Makefile.in (DLD_XSRC): Delete spkron.cc.
+	* DLD-FUNCTIONS/spkron.cc: Delete.
+	* DLD-FUNCTIONS/kron.cc: Include here and dispatch to the sparse
+	version if either argument is sparse.
+
 2008-02-06  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.in (parse.cc): Also use --defines option for bison.
