@@ -1,3 +1,7 @@
+2008-02-07  David Bateman  <dbateman@free.fr>
+
+	* interpreter/sparse.txi: Remove references to spkron.
+
 2008-02-06  John W. Eaton  <jwe@octave.org>
 
 	* interpreter/Makefile.in (stmp-html, HTML): New targets.
